--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Dashboard Studenti</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
@@ -16,6 +16,52 @@
         </div>
       </nav>
     </header>
+    <main>
+      <div class="container">
+        <section class="mt-5">
+          <h2 class="px-5">Lista di Studenti</h1>
+            <table class="table">
+              <thead>
+                <tr>
+                  <th scope="col">Nome</th>
+                  <th scope="col">Cognome</th>
+                  <th scope="col">Eta</th>
+                </tr>
+              </thead>
+              <tbody id="tbody-userList" class="table-group-divider">
+              </tbody>
+            </table>
+            <div class="row">
+              <div class="col-6">
+                <form id="formAddStudent" class="pb-5 pt-5">
+                  <div class="mb-3">
+                    <label for="nameInput" class="form-label">Nome</label>
+                    <input type="text" class="form-control" id="nameInput" aria-describedby="nameHelp">
+                    <div id="nameHelp" class="form-text">Inserisci il nome del tuo studente</div>
+                  </div>
+                  <div class="mb-3">
+                    <label for="cognomeInput" class="form-label">Cognome</label>
+                    <input type="text" class="form-control" id="cognomeInput" aria-describedby="cognomeHelp">
+                    <div id="cognomeHelp" class="form-text">Inserisci il cognome del tuo studente</div>
+                  </div>
+                  <div class="mb-3">
+                    <label for="etaInput" class="form-label">Età</label>
+                    <input type="number" class="form-control" id="etaInput" aria-describedby="etaHelp">
+                    <div id="etaHelp" class="form-text">Inserisci l'età del tuo studente</div>
+                  </div>
+                  <button id="addStudentSubmit" type="submit" class="btn btn-primary">Submit</button>
+                </form>
+              </div>
+            </div>
+        </section>
+      </div>
+    </main>
+    <footer>
+      <div class="bg-dark text-white text-center p-2">
+        Developed by Elijah (Gabriele Mario Tosto) with 🧡 for boolean.careers
+      </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="./script/app.js"></script>
   </body>
 </html>
