END: Esercizio completato

--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
               <tbody id="tbody-userList" class="table-group-divider">
               </tbody>
             </table>
+            <hr class="mt-5 border border-dark border-2 opacity-100">
             <div class="row">
               <div class="col-6">
-                <form id="formAddStudent" class="pb-5 pt-5">
+                <form id="formAddStudent" class="pb-5 pt-3">
+                  <h2>Inserisci un nuovo Studente</h2>
                   <div class="mb-3">
                     <label for="nameInput" class="form-label">Nome</label>
                     <input type="text" class="form-control" id="nameInput" aria-describedby="nameHelp">
